# GodotProject

./: .gitignore  README.md  export_presets.cfg  project.godot
scenes/: building_interior.tscn  female_cat_companion.tscn  main.tscn  shelter_interior.tscn
scripts/: aim_reticle.gd  aim_reticle.gd.uid  building_catalog.gd  building_catalog.gd.uid  building_entrance_portal.gd  building_entrance_portal.gd.uid  building_interior.gd  building_interior.gd.uid  building_loot_module.gd  building_loot_module.gd.uid  building_room_module.gd  (+83 more)
tools/sprite-gen/: NOTICE  README.md  SKILL.md  UPSTREAM.md  pyproject.toml
tools/sprite-gen/scripts/: check_visible_magenta.py  compose_selected_cycle.py  compose_sprite_atlas.py  compose_sprite_gif.py  curation.py  export_curated_pngs.py  extract.py  extract_sprite_row_frames.py  generate_sprite_image.py  gif_utils.py  inspect_sprite_run.py  measure_align_sigma.py  prepare_sprite_run.py  preview_animation.py  run_correction_loop.py  runio.py  score_sprite_run.py  serve_curation.py  slice_sheet_cells.py  unpack_atlas_run.py
tools/sprite-gen/scripts/curator/: curator.css  curator.js  index.html
tools/sprite-gen/sprite_gen/: __init__.py  check_visible_magenta.py  cli.py  compose_atlas.py  compose_cycle.py  compose_gif.py  correction_loop.py  curation.py  export_pngs.py  extract.py  generate_image.py  gif_utils.py  inspect.py  layout.py  prepare.py  preview.py  runio.py  score.py  segment.py  slice_sheet.py  unpack_atlas.py
tools/sprite-gen/tests/: test_export_selected_only.py  test_generation_concurrency.py  test_skeleton_profile.py
(+650 files in other folders)
