# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-gen"
# Release discipline: keep this package metadata version synchronized with
# SKILL.md's `version:` field in the same release commit.
version = "1.56.15"
description = "Component-row pipeline for clean 2D game sprites and animation atlases"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.0,<13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/aldegad/sprite-gen"

[tool.pytest.ini_options]
testpaths = ["tests"]

# The pipeline ships an importable sprite_gen package plus backwards-compatible
# scripts/ CLI wrappers invoked as `python3 scripts/<tool>.py`.
[tool.setuptools]
packages = ["sprite_gen"]
